# solid-disco

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  implementation.md  langfuse.txt  pyproject.toml
fastmcp_organizer/: __main__.py  cli.py  config.py
fastmcp_organizer/core/: classifier.py  db.py  interfaces.py  reader.py  safety.py  scanner.py
fastmcp_organizer/prompts/: classifier.poml
fastmcp_organizer/server/: context.py  mcp_agent.py  service.py
fastmcp_organizer/utils/: observability.py
tests/: test_basic.py
